# grpc_modbus_client

./: Cargo.toml  build.rs
proto/: sunspec.proto
src/: main.rs
