[package]
name = "grpc_modbus_client"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync", "net"] }
tonic = { version = "0.14.6", features = ["codegen", "transport"] }
prost = "0.14.3" # Manipulação de Protocol Buffers
tonic-prost = "*"
tower = "0.5.3" # Necessário para o conector Unix
hyper-util = { version = "0.1", features = ["tokio"] }

[build-dependencies]
tonic-prost-build = { version = "0.14.6", features = ["transport"] }